Fix overflowing output on small devices

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ output {
   resize: both;
   overflow: auto;
   width: 500px;
+  max-width: 100%;
   background: #fff;
 }
 
